--- a/TreeColumnSelector/DemoProject/DemoProject.csproj
+++ b/TreeColumnSelector/DemoProject/DemoProject.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -14,10 +14,11 @@
     <NoStdLib>False</NoStdLib>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <StartupObject>DemoProject.MainClass</StartupObject>
+    <Description>This is a project set up for the demonstration of the GoonTools TreeViewColumn Selector widget for Mono/Gtk#.</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>Full</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG</DefineConstants>
@@ -57,8 +58,6 @@
     </EmbeddedResource>
     <Compile Include="TreeView\ListsTreeView.cs" />
     <Compile Include="TreeView\ListsTreeView.designer.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="MainWindow.cs" />
     <Compile Include="gtk-gui\MainWindow.cs" />
@@ -66,7 +65,6 @@
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="TreeView" />
     <ProjectReference Include="..\TreeColumnSelector\TreeColumnSelector.csproj">
       <Project>{9A2A10EA-4266-4175-9BB0-63C98F227476}</Project>
       <Name>TreeColumnSelector</Name>
