--- a/ThudSharp/ThudSharp/ThudSharp.csproj
+++ b/ThudSharp/ThudSharp/ThudSharp.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -95,6 +95,9 @@
     <Compile Include="gtk-gui\ThudSharp.GameBoard.cs" />
     <Compile Include="Board\MovablePiece.cs" />
     <Compile Include="gtk-gui\ThudSharp.MovablePiece.cs" />
+    <Content Include="images\HighLight.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
