--- a/TreeColumnSelector/TreeColumnSelector/TreeColumnSelector.csproj
+++ b/TreeColumnSelector/TreeColumnSelector/TreeColumnSelector.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{9A2A10EA-4266-4175-9BB0-63C98F227476}</ProjectGuid>
