--- a/ThudSharp/ThudSharp/ThudSharp.csproj
+++ b/ThudSharp/ThudSharp/ThudSharp.csproj
@@ -73,7 +73,8 @@
     <Content Include="images\background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Compile Include="Board\GameBoardColumnCollection.cs" />
+    <Compile Include="Board\BoardPieceCollection.cs" />
+    <Compile Include="Board\MovablePieceCollection.cs" />
     <Compile Include="Board\GameBoardRow.cs" />
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="MainWindow.cs" />
@@ -99,6 +100,9 @@
     <Compile Include="Board\MovablePiece.cs" />
     <Compile Include="gtk-gui\ThudSharp.MovablePiece.cs" />
     <Content Include="images\HighLight.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\Rock.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
