* MonoBPMonitor/frmOptions.cs: * MonoBPMonitor/frmBPEntry.cs: * MonoBPMonitor/gtk-gui/gui.stetic: * MonoBPMonitor/Entry/frmBPEntry.cs: * MonoBPMonitor/MonoBPMonitor.csproj: * MonoBPMonitor/Doctors/frmDoctors.cs: * MonoBPMonitor/Users/UserComboBox.cs: * MonoBPMonitor/Doctors/DoctorComboBox.cs: * MonoBPMonitor/Medications/frmMedication.cs: * MonoBPMonitor/Doctors/DoctorTreeView.Designer.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmDoctors.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmBPEntry.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmMedication.cs:

--- a/BloodPressureMonitor/MonoBPMonitor/MonoBPMonitor/MonoBPMonitor.csproj
+++ b/BloodPressureMonitor/MonoBPMonitor/MonoBPMonitor/MonoBPMonitor.csproj
@@ -90,7 +90,6 @@
     <Compile Include="gtk-gui\MonoBPMonitor.frmUsers.cs" />
     <Compile Include="gtk-gui\MonoBPMonitor.frmDoctors.cs" />
     <Compile Include="gtk-gui\MonoBPMonitor.frmMedication.cs" />
-    <Compile Include="frmBPEntry.cs" />
     <Compile Include="gtk-gui\MonoBPMonitor.frmBPEntry.cs" />
     <Compile Include="frmCalendar.cs" />
     <Compile Include="gtk-gui\MonoBPMonitor.frmCalendar.cs" />
@@ -113,6 +112,8 @@
     <Compile Include="Doctors\Doctor.cs" />
     <Compile Include="Entry\Entry.cs" />
     <Compile Include="Users\UserComboBox.cs" />
+    <Compile Include="Doctors\DoctorComboBox.cs" />
+    <Compile Include="Entry\frmBPEntry.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
