* MonoBPMonitor/images/rx.png: * MonoBPMonitor/MainWindow.cs: * MonoBPMonitor/images/doctor.png: * MonoBPMonitor/gtk-gui/gui.stetic: * MonoBPMonitor/Entry/frmBPEntry.cs: * MonoBPMonitor/gtk-gui/generated.cs: * MonoBPMonitor/MonoBPMonitor.csproj: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmUsers.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmBPEntry.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.MainWindow.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmDoctors.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.frmMedication.cs:

--- a/BloodPressureMonitor/MonoBPMonitor/MonoBPMonitor/MonoBPMonitor.csproj
+++ b/BloodPressureMonitor/MonoBPMonitor/MonoBPMonitor/MonoBPMonitor.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -115,6 +115,12 @@
     <Compile Include="Users\UserComboBox.cs" />
     <Compile Include="Doctors\DoctorComboBox.cs" />
     <Compile Include="Entry\frmBPEntry.cs" />
+    <EmbeddedResource Include="images\doctor.png">
+      <LogicalName>doctor.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\rx.png">
+      <LogicalName>rx.png</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
