--- a/BloodPressureMonitor/MonoBPMonitor/MonoBPMonitor/MonoBPMonitor.csproj
+++ b/BloodPressureMonitor/MonoBPMonitor/MonoBPMonitor/MonoBPMonitor.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -77,8 +77,6 @@
     </EmbeddedResource>
     <Compile Include="Doctors\DoctorTreeView.cs" />
     <Compile Include="Doctors\DoctorTreeView.Designer.cs" />
-    <Compile Include="Entry\EntryTreeView.cs" />
-    <Compile Include="Entry\EntryTreeView.Designer.cs" />
     <Compile Include="Medications\MedicationTreeView.cs" />
     <Compile Include="Medications\MedicationTreeView.Designer.cs" />
     <Compile Include="Users\UserRendererCombo.cs" />
@@ -122,6 +120,9 @@
       <LogicalName>rx.png</LogicalName>
     </EmbeddedResource>
     <None Include="Reports\MainEntry\Description.txt" />
+    <Compile Include="Doctors\DoctorRendererCombo.cs" />
+    <Compile Include="Reports\MainEntry\EntryTreeView.cs" />
+    <Compile Include="Reports\MainEntry\EntryTreeView.Designer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
@@ -130,8 +131,7 @@
     </MonoDevelop>
   </ProjectExtensions>
   <ItemGroup>
-    <Folder Include="Reports" />
-    <Folder Include="Reports\MainEntry" />
+    <Folder Include="Reports\" />
     <Folder Include="SetUp\" />
     <Folder Include="Doctors\" />
     <Folder Include="Users\" />
