--- a/SoftwareUpdate/GUPdotNET/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/GUPdotNET/app.config
@@ -17,9 +17,11 @@
 		-->
 		<!-- The URL of the web site that contains the update information -->
 		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.aspx" />
-		<!-- The current major version of the calling that we want to update -->
+		<!-- The current major version of the calling that we want to update
 		<add key="CurrentMajorVersion" value="1" />
-		<!-- The current minor version of the calling that we want to update -->
+		 -->
+		<!-- The current minor version of the calling that we want to update
 		<add key="CurrentMinorVersion" value="0" />
+		 -->
  	</appSettings>
 </configuration>
